[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Zacros_CE_fit"
version = "0.1.0"
description = "Cluster Expansion fitting analysis tools for Zacros output"
authors = [
  { name = "Sharath", email = "sharath94@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
  "pandas",
  "numpy",
  "matplotlib",
  "seaborn",
  "openpyxl"
]

[project.scripts]
zacros-ce-fit = "zacros_ce_fit.cli:main"